Размечаю главную по демке
Скопипастил текст из  ПСДшника. Возможно, нужно поменять в коде регистр
текста на нижний. Пока ничего не менял.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,55 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Барбершоп</title>
+    <title>Барбершоп «Бородинский»</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+  	<header class="main-header">
+  	  <div class="container">
+  	  	<nav class="main-navigation">
+					<ul>
+						<li>
+							<a href="#">Информация</a>
+						</li>
+						<li>
+							<a href="#">Новости</a>
+						</li>
+						<li>
+							<a href="#">Прайс-лист</a>
+						</li>
+						<li>
+							<a href="#">Магазин</a>
+						</li>
+						<li>
+							<a href="#">Контакты</a>
+						</li>
+					</ul>
+  	  	</nav>
+  	  	<div class="user-block">
+					<a class="login" href="#">Вход</a>
+  	  	</div>
+  	  </div>
+  	  <main class="container">
+  	  	<div class="index-logo">
+  	  		<img src="img/index-ligo.png" width="368" height="204" alt="Барбершоп «Бородинский»">
+  	  		<section class="features">
+  	  			<div class="features-item">
+  	  				<b class="features-name">БЫСТРО</b>
+  	  				<p class="fetures-text">МЫ ДЕЛАЕМ СВОЮ РАБОТУ БЫСТРО! ДВА ЧАСА ПРОЛЕТЯТ НЕЗАМЕТНО И ВЫ — СЧАСТЛИВЫЙ ОБЛАДЕТЕЛЬ СТИЛЬНОЙ СТРИЖКИ-МИНУТКИ!</p>
+  	  			</div>
+  	  			<div class="features-item">
+  	  				<b class="features-name">КРУТО</b>
+  	  				<p class="fetures-text">ЗАБУДЬТЕ, КАК ВЫ СТРИГЛИСЬ РАНЬШЕ.
+МЫ СДЕЛАЕМ ИЗ ВАС ЗВЕЗДУ ФУТБОЛА ИЛИ КИНО!
+ВО ВСЯКОМ СЛУЧАЕ ВНЕШНЕ.</p>
+  	  			</div>
+  	  			<div class="features-item">
+  	  				<b class="features-name">ДОРОГО</b>
+  	  				<p class="fetures-text">НАШИ МАСТЕРА — ПРОФЕССИОНАЛЫ СВОЕГО ДЕЛА И НЕ МОГУТ СТОИТЬ ДЕШЕВО. К ТОМУ ЖЕ, РАЗВЕ ЦЕНА НЕ ДАЕТ ОПРЕДЕЛЕНЫЙ СТАТУС?</p>
+  	  			</div>
+  	  		</section>
+  	  	</div>
+  	  </main>
+  	</header>
   </body>
 </html>
