--- a/catalog.html
+++ b/catalog.html
@@ -104,37 +104,79 @@
 	  				<figure class="catalog-content-item">
   	  				<img src="img/item-1.jpg" width="100" height="100" alt="Итем-1">
   	  			</figure>
-  	  			<button class="btn buy">Купить</button>
+  	  			<p>Набор для путешествий 
+						«Baxter of California»</p>
+						<div class="price">
+							<p>2 900 руб.</p>
+						</div>	
+						<div class="buy">	
+  	  				<a href="#">Купить</a>
+   					</div>
 	  			</article>
 	  			<article>
 	  				<figure class="catalog-content-item">
   	  				<img src="img/item-1.jpg" width="100" height="100" alt="Итем-1">
   	  			</figure>
-  	  			<button class="btn buy">Купить</button>
+  	  			<p>Увлажняющий кондиционер 
+						«Baxter of California»</p>
+						<div class="price">
+							<p>750 руб.</p>
+						</div>	
+						<div class="buy">	
+  	  				<a href="#">Купить</a>
+   					</div>
 	  			</article>
 	  			<article>
 	  				<figure class="catalog-content-item">
   	  				<img src="img/item-1.jpg" width="100" height="100" alt="Итем-1">
   	  			</figure>
-  	  			<button class="btn buy">Купить</button>
+  	  			<p>Гель для волос
+						«SUAVECITO»</p>
+						<div class="price">
+							<p>290 руб.</p>
+						</div>	
+						<div class="buy">	
+  	  				<a href="#">Купить</a>
+   					</div>
 	  			</article>
 	  			<article>
 	  				<figure class="catalog-content-item">
   	  				<img src="img/item-1.jpg" width="100" height="100" alt="Итем-1">
   	  			</figure>
-  	  			<button class="btn buy">Купить</button>
+  	  			<p>Глина для укладки волос 
+						«American crew»</p>
+						<div class="price">
+							<p>500 руб.</p>
+						</div>	
+						<div class="buy">	
+  	  				<a href="#">Купить</a>
+   					</div>
 	  			</article>
 	  			<article>
 	  				<figure class="catalog-content-item">
   	  				<img src="img/item-1.jpg" width="100" height="100" alt="Итем-1">
   	  			</figure>
-  	  			<button class="btn buy">Купить</button>
+  	  			<p>Гель для волос
+						«AMERICAN CREW»</p>
+						<div class="price">
+							<p300 руб.</p>
+						</div>	
+						<div class="buy">	
+  	  				<a href="#">Купить</a>
+   					</div>
 	  			</article>
 	  			<article>
 	  				<figure class="catalog-content-item">
   	  				<img src="img/item-1.jpg" width="100" height="100" alt="Итем-1">
   	  			</figure>
-  	  			<button class="btn buy">Купить</button>
+  	  			<p>Набор для бритья
+						«Baxter of California»</p>
+						<div class="price">
+							<p>3 900 руб.</p>
+						</div>	
+						<div class="buy">	
+  	  				<a href="#">Купить</a>
+   					</div>
 	  			</article>
 	  			<nav class="catalog-content-pages">
 	  			<ul>
