--- a/catalog-item.html
+++ b/catalog-item.html
@@ -32,7 +32,68 @@
   	  </div>
   	</header>
   	<main class="container">
-
+  		<div class="catalog-item-content">
+	  		<h2 class="catalog-item-content-tittle">Набор для путешествий «Baxter of California»</h2>
+	  		<nav class="catalog-item-content-breadcrumbs">
+	  			<ul>
+	  				<li>
+	  					<a href="#">Главная</a>
+	  				</li>
+	  				<li>
+	  					<a href="#">Магазин</a>
+	  				</li>
+	  				<li>
+	  					<a href="#">Средства для ухода</a>
+	  				</li>
+            <li>
+              <a href="#">Набор для путешествий «Baxter of California»</a>
+            </li>
+	  			</ul>
+	    	</nav>
+        <div class="catalog-item-content-left">
+          <figure class="catalog-item-content-view-1">
+            <img src="img/view-1.jpg" width="300" height="300" alt="Вид-1">
+          </figure>
+          <figure class="catalog-item-content-view-2">
+            <img src="img/view-2.jpg" width="100" height="100" alt="Вид-2">
+          </figure>
+          <figure class="catalog-item-content-view-2">
+            <img src="img/view-3.jpg" width="100" height="100" alt="Вид-2">
+          </figure>
+          <figure class="catalog-item-content-view-2">
+            <img src="img/view-4.jpg" width="100" height="100" alt="Вид-2">
+          </figure>
+        </div>
+        <div class="catalog-item-content-right">
+          <b class="availability">Есть в наличии</b>
+          <b class="vendor-code">Артикул: dexter-ae</b>
+          <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+          <div class="price">
+            <p>2 900 руб.</p>
+          </div>  
+          <div class="buy"> 
+            <a href="#">Купить</a>
+          </div>
+          <b class="catalog-item-content-name">В набор входят:</b>
+          <ul>
+            <li>
+            Средство для умывания (50 мл)
+            </li>
+            <li>
+            Увлажняющий крем (50 мл)
+            </li>
+            <li>
+            Крем для бритья (50 мл)
+            </li>
+            <li>
+            Крем после бритья, шампунь (50 мл)
+            </li>
+            <li>
+            Удобная кожаная косметичка
+            </li>
+          </ul>
+        </div>
+      </div> 
   	</main>
   	<footer class="main-footer">
       <div class="container">
