Добавил лого в угол и поменял заголовки

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -2,11 +2,14 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Барбершоп «Бородинский»</title>
+    <title>Товар барбершопа «Бородинский»</title>
   </head>
   <body>
   	<header class="main-header">
   	  <div class="container">
+        <figure>
+          <img src="logo-small.jpg" width="150" height="50" alt="Лого-мал">
+        </figure>
   	  	<nav class="main-navigation">
 					<ul>
 						<li>
