--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
   	  		</div>
   	  		<div class="features-item">
   	  			<b class="features-name">круто</b>
-  	  			<p class="fetures-text">забудьте, как вы стриглись раньше.
-						мы сделаем из вас звезду футбола или кино!
-						во всяком случае внешне.</p>
+  	  			<p class="fetures-text">забудьте, как вы стриглись раньше. мы сделаем из вас звезду футбола или кино! во всяком случае внешне.</p>
   	  		</div>
   	  		<div class="features-item">
   	  			<b class="features-name">дорого</b>
