--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   	  	</section>
   	  	<div class="index-content">
   	  		<div class="index-content-left">
-						<h2 class="index-content-tittle">новости</h2>
+						<h2 class="index-content-title">новости</h2>
 						<ul>
 							<li>
 								<p>нам наконец завезли ягермайстер! теперь вы можете пропустить стаканчик во время стрижки</p>
@@ -65,7 +65,7 @@
 						<a class="btn" href="#">все новости</a>
   	  		</div>
   	  		<div class="index-content-right">
-  	  			<h2 class="index-content-tittle">фотогалерея</h2>
+  	  			<h2 class="index-content-title">фотогалерея</h2>
   	  			<div class="gallery">
   	  				<figure class="gallery-content">
   	  					<img src="img/photo-1.jpg" width="286" height="164" alt="Галерея-1">
@@ -77,7 +77,7 @@
   	  	</div>
   	  	<div class="index-content">
   	  		<div class="index-content-left">
-						<h2 class="index-content-tittle">Контактная информация</h2>
+						<h2 class="index-content-title">Контактная информация</h2>
 						<p>
 						барбершоп «бородинский»<br>
             адрес: г. санкт-петербург, б. конюшенная, д. 19/8<br>
@@ -91,7 +91,7 @@
 						<a class="btn" href="#">Обратная связь</a>
 					</div>
 					<div class="index-content-right">
-						<h2 class="index-content-tittle">Записаться</h2>
+						<h2 class="index-content-title">Записаться</h2>
 						<p>укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
 						<form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
 							<input type="text" name="date" value="" placeholder="Дата">
