Отредактировал каталог и итем

--- a/catalog.html
+++ b/catalog.html
@@ -80,8 +80,9 @@
           		  American Crew
         		  </label>
         		  <br>
-        		  <div class="catalog-content-name">группы товаров:</div>
-        		  <br>
+            </fieldset>
+            <fieldset>
+        		  <legend class="catalog-content-name">Группы товаров:</legend>
         		  <label>
               </label>
           	    <input type="radio" name="products" value="shaving">
@@ -174,7 +175,7 @@
 	  					<a href="#">1</a>
 	  				</li>
 	  				<li>
-	  					<a class="paged-highlighted" href="#">2</a>
+	  					<a class="pages-highlighted" href="#">2</a>
 	  				</li>
 	  				<li>
 	  					<a href="#">3</a>
