--- a/catalog-item.html
+++ b/catalog-item.html
@@ -2,14 +2,12 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Товар барбершопа «Бородинский»</title>
+    <title>Барбершоп «Бородинский»</title>
   </head>
   <body>
   	<header class="main-header">
   	  <div class="container">
-        <figure>
-          <img src="logo-small.jpg" width="150" height="50" alt="Лого-мал">
-        </figure>
+        <a href="#" class="logo-small"><img src="logo-small.jpg" width="150" height="50" alt="Лого-мал"></a>
   	  	<nav class="main-navigation">
 					<ul>
 						<li>
@@ -34,38 +32,38 @@
   	  	</div>
   	  </div>
   	</header>
-  	<main class="container">
   		<div class="catalog-item-content">
-	  		<h2 class="catalog-item-content-tittle">Набор для путешествий «Baxter of California»</h2>
-	  		<nav class="catalog-item-content-breadcrumbs">
-	  			<ul>
-	  				<li>
-	  					<a href="#">Главная</a>
-	  				</li>
-	  				<li>
-	  					<a href="#">Магазин</a>
-	  				</li>
-	  				<li>
-	  					<a href="#">Средства для ухода</a>
-	  				</li>
-            <li>
-              <a href="#">Набор для путешествий «Baxter of California»</a>
-            </li>
-	  			</ul>
-	    	</nav>
+	  		<h1 class="catalog-item-content-title">Набор для путешествий «Baxter of California»</h1>
+	  		<ul class="catalog-item-content-breadcrumbs">
+	  			<li>
+	  				<a href="#">Главная</a>
+	  			</li>
+	  			<li>
+	  				<a href="#">Магазин</a>
+	  			</li>
+	  			<li>
+	  				<a href="#">Средства для ухода</a>
+	  			</li>
+          <li>
+            <a class="breadcrumbs-highlighted" href="#">Набор для путешествий «Baxter of California»</a>
+          </li>
+	  		</ul>
+      <main class="container">
         <div class="catalog-item-content-left">
-          <figure class="catalog-item-content-view-1">
-            <img src="img/view-1.jpg" width="300" height="300" alt="Вид-1">
-          </figure>
-          <figure class="catalog-item-content-view-2">
-            <img src="img/view-2.jpg" width="100" height="100" alt="Вид-2">
-          </figure>
-          <figure class="catalog-item-content-view-2">
-            <img src="img/view-3.jpg" width="100" height="100" alt="Вид-2">
-          </figure>
-          <figure class="catalog-item-content-view-2">
-            <img src="img/view-4.jpg" width="100" height="100" alt="Вид-2">
-          </figure>
+          <div class="catalog-item-content-views">
+            <figure>
+              <img src="img/view-1.jpg" width="300" height="300" alt="Вид-1">
+            </figure>
+            <figure class="catalog-item-content-view-2">
+              <img src="img/view-2.jpg" width="100" height="100" alt="Вид-2">
+            </figure>
+            <figure class="catalog-item-content-view-3">
+              <img src="img/view-3.jpg" width="100" height="100" alt="Вид-3">
+            </figure>
+            <figure class="catalog-item-content-view-4">
+              <img src="img/view-4.jpg" width="100" height="100" alt="Вид-4">
+            </figure>
+          </div>
         </div>
         <div class="catalog-item-content-right">
           <b class="availability">Есть в наличии</b>
