Подключил изображения и стили к разметке

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <body>
   	<header class="main-header">
   	  <div class="container">
-        <a href="#" class="logo-small"><img src="logo-small.jpg" width="150" height="50" alt="Лого-мал"></a>
+        <a href="#" class="logo-small"><img src="img/logo-small.png" width="111" height="24" alt="Лого-мал"></a>
   	  	<nav class="main-navigation">
 					<ul>
 						<li>
@@ -106,7 +106,7 @@
 	  		</div>
 	  		<div class="catalog-content-right">
 	  			<article class="catalog-content-item">
-  	  			<img src="img/item-1.jpg" width="100" height="100" alt="Итем-1">
+  	  			<img src="img/catalog-photo-1.jpg" width="220" height="165" alt="Итем-1">
   	  			<div class="item-title">
               <span class="item-title-type">Набор для путешествий</span>
 						  <span class="item-title-name">«Baxter of California»</span>
@@ -117,7 +117,7 @@
    					</div>
 	  			</article>
 	  			<article class="catalog-content-item">
-  	  			<img src="img/item-2.jpg" width="100" height="100" alt="Итем-2">
+  	  			<img src="img/catalog-photo-2.jpg" width="220" height="165" alt="Итем-2">
             <div class="item-title">
               <span class="item-title-type">Увлажняющий кондиционер</span>
               <span class="item-title-name">«Baxter of California»</span>
@@ -128,7 +128,7 @@
             </div>
 	  			</article>
 	  			<article class="catalog-content-item">
-  	  			<img src="img/item-3.jpg" width="100" height="100" alt="Итем-3">
+  	  			<img src="img/catalog-photo-3.jpg" width="220" height="165" alt="Итем-3">
             <div class="item-title">
               <span class="item-title-type">Гель для волос</span>
               <span class="item-title-name">«SUAVECITO»</span>
@@ -139,7 +139,7 @@
             </div>
 	  			</article>
 	  			<article class="catalog-content-item">
-  	  			<img src="img/item-4.jpg" width="100" height="100" alt="Итем-4">
+  	  			<img src="img/catalog-photo-4.jpg" width="220" height="165" alt="Итем-4">
             <div class="item-title">
               <span class="item-title-type">Глина для укладки волос</span>
               <span class="item-title-name">«American crew»</span>
@@ -150,7 +150,7 @@
             </div>
 	  			</article>
 	  			<article class="catalog-content-item">
-  	  			<img src="img/item-5.jpg" width="100" height="100" alt="Итем-5">
+  	  			<img src="img/catalog-photo-5.jpg" width="220" height="165" alt="Итем-5">
             <div class="item-title">
               <span class="item-title-type">Гель для волос</span>
               <span class="item-title-name">«American crew»</span>
@@ -161,7 +161,7 @@
             </div>
 	  			</article>
 	  			<article class="catalog-content-item">
-  	  			<img src="img/item-6.jpg" width="100" height="100" alt="Итем-6">
+  	  			<img src="img/catalog-photo-6.jpg" width="220" height="165" alt="Итем-6">
             <div class="item-title">
               <span class="item-title-type">Набор для бритья</span>
               <span class="item-title-name">«Baxter of California»</span>
