--- a/item.html
+++ b/item.html
@@ -8,7 +8,7 @@
   <body>
   	<header class="main-header">
   	  <div class="container">
-        <a href="#" class="logo-small"><img src="logo-small.jpg" width="150" height="50" alt="Лого-мал"></a>
+        <a href="#" class="logo-small"><img src="img/logo-small.png" width="111" height="24" alt="Лого-мал"></a>
   	  	<nav class="main-navigation">
 					<ul>
 						<li>
@@ -52,11 +52,11 @@
       <main class="container">
         <div class="item-content-left">
           <figure class="item-content-slider">
-            <img src="img/view-1.jpg" alt="Вид-1" class="slider-big">
+            <img src="img/item-photo-1.jpg" width="486" height="524" class="slider-big" alt="Вид-1">
             <div class="slider-small">
-              <img src="img/view-2.jpg" alt="Вид-2">
-              <img src="img/view-3.jpg" alt="Вид-3">
-              <img src="img/view-4.jpg" alt="Вид-4">
+              <img src="img/item-photo-2.jpg" width="166" height="175" alt="Вид-2">
+              <img src="img/item-photo-3.jpg" width="166" height="175" alt="Вид-3">
+              <img src="img/item-photo-4.jpg" width="166" height="175" alt="Вид-4">
             </div>
           </figure>
         </div>
