--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   	</header>
   	<main class="container">
   	  <div class="index-logo">
-  	  	<img src="img/index-ligo.png" width="368" height="204" alt="Барбершоп «Бородинский»">
+  	  	<img src="img/logo-big.png" width="368" height="204" alt="Барбершоп «Бородинский»">
   	  </div>
   	  	<section class="features">
   	  		<div class="features-item">
@@ -69,7 +69,7 @@
   	  			<h2 class="index-content-title">фотогалерея</h2>
   	  			<div class="gallery">
   	  				<figure class="gallery-content">
-  	  					<img src="img/photo-1.jpg" width="286" height="164" alt="Галерея-1">
+  	  					<img src="img/index-photo-1.jpg" width="286" height="164" alt="Галерея-1">
   	  				</figure>
   	  					<button class="btn gallery-prev">назад</button>
   	  					<button class="btn gallery-next">вперед</button>
