--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
   	<header class="main-header">
-  	  <div class="container">
+  	  <div class="container clearfix">
   	  	<nav class="main-navigation">
 					<ul>
 						<li>
@@ -36,7 +36,7 @@
   	  <div class="index-logo">
   	  	<img src="img/logo-big.png" width="368" height="204" alt="Барбершоп «Бородинский»">
   	  </div>
-  	  	<section class="features">
+  	  	<section class="features clearfix">
   	  		<div class="features-item">
   	  			<b class="features-name">быстро</b>
   	  			<p class="fetures-text">мы делаем свою работу быстро! два часа пролетят незаметно и вы — счастливый обладетель стильной стрижки-минутки!</p>
@@ -50,7 +50,7 @@
   	  			<p class="fetures-text">наши мастера — профессионалы своего дела и не могут стоить дешево. к тому же, разве цена не дает определеный статус?</p>
   	  		</div>
   	  	</section>
-  	  	<div class="index-content">
+  	  	<div class="index-content clearfix">
   	  		<div class="index-content-left">
 						<h2 class="index-content-title">новости</h2>
 						<ul>
@@ -76,7 +76,7 @@
   	  			</div>
   	  		</div>
   	  	</div>
-  	  	<div class="index-content">
+  	  	<div class="index-content clearfix">
   	  		<div class="index-content-left">
 						<h2 class="index-content-title">Контактная информация</h2>
 						<p>
