Построил сетку у Барбершопа
требует доработки

--- a/catalog.html
+++ b/catalog.html
@@ -7,10 +7,12 @@
   </head>
   <body>
   	<header class="main-header">
-  	  <div class="container">
-        <a href="#" class="logo-small"><img src="img/logo-small.png" width="111" height="24" alt="Лого-мал"></a>
+  	  <div class="container clearfix">
   	  	<nav class="main-navigation">
 					<ul>
+            <li>
+              <a href="#" class="logo-small"><img src="img/logo-small.png" width="111" height="24" alt="Лого-мал"></a>
+            </li>
 						<li>
 							<a href="#">Информация</a>
 						</li>
@@ -46,7 +48,7 @@
 	  			<a class="breadcrumbs-highlighted" href="#">Средства для ухода</a>
 	  		</li>
 	  	</ul>
-      <main class="container">
+      <main class="container clearfix">
 	  		<div class="catalog-content-left">
 	  			<form action="#" method="post">
             <fieldset>
@@ -100,8 +102,8 @@
                 Аксессуары
           	  </label>
           	  <br>
-          	  <input type="submit" value="Показать">
             </fieldset>
+            <input type="submit" value="Показать">
         	</form>
 	  		</div>
 	  		<div class="catalog-content-right">
@@ -189,7 +191,7 @@
       </main>
 	  </div>
   	<footer class="main-footer">
-      <div class="container">
+      <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
