--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   	  	</div>
   	  </main>
   	  <footer class="main-footer">
-  	  	<div class="container">
+  	  	<div class="container clearfix">
   	  		<section class="footer-contacts">
   	  			барбершоп «бородинский»<br>
 						адрес: г. санкт-петербург, ул. б. конюшенная, д. 19/8<br>
