--- a/catalog.html
+++ b/catalog.html
@@ -196,7 +196,8 @@
     </main>
   	<footer class="main-footer">
       <div class="container clearfix">
-        <section class="footer-contacts">
+        <
+         class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
           <a href="#">Как нас найти?</a><br>
